// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Current render default header 1`] = `
<body>
  <div>
    <header
      class="header"
    >
      <div
        class="container"
      >
        <div
          class="header__in"
        >
          <a
            class="header__title"
            href="/search"
          >
            <span
              class="font-weight-black"
            >
              netflix
            </span>
            roulette
          </a>
          <button
            class="btn btn--outline-primary  "
            type="button"
          >
            + Add Movie
          </button>
        </div>
      </div>
    </header>
  </div>
</body>
`;

exports[`Current render header when open film info 1`] = `
<body>
  <div>
    <header
      class="header"
    >
      <div
        class="container"
      >
        <div
          class="header__in"
        >
          <a
            class="header__title"
            href="/search"
          >
            <span
              class="font-weight-black"
            >
              netflix
            </span>
            roulette
          </a>
          <button
            aria-label="Close film info"
            class="icon-btn"
            type="button"
          >
            <svg
              class="icon-btn__image"
              fill="none"
              height="30"
              viewBox="0 0 29 30"
              width="29"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="18.5"
                cy="10.5"
                r="9.5"
                stroke="#F65261"
                stroke-width="2"
              />
              <path
                d="M10.5 19.5L1.5 28.5"
                stroke="#F65261"
                stroke-linecap="square"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
  </div>
</body>
`;
